<resources>
    <string name="app_name">MyMovie</string>
    <string name="info">Info</string>
    <string name="error">Error</string>
    <string name="success">Success</string>
    <string name="movies">Movies</string>
    <string name="trending">Trending</string>
    <string name="newSeries">New series</string>
    <string name="categories">Categories</string>
    <string name="forYou">For you</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="search">Search</string>
    <string name="wishlist">Wishlist</string>
    <string name="about">About</string>
    <string name="cast">Cast</string>
    <string name="crew">Crew</string>
    <string name="bio">Bio</string>
    <string name="bornIn">Born in</string>
    <string name="more">More</string>
    <string name="recommendedToWatch">Recommend to watch</string>
    <string name="userReviews">User Reviews</string>
    <string name="photos">Photos</string>
    <string name="companies">Companies</string>
    <string name="genre">Genre</string>
    <string name="actor">Actor</string>
    <string name="movieAndTVShow">Movies and TV Shows</string>
    <string name="worldFilmCritics">World Film Critics Rating </string>
    <string name="watchTrailer">Watch trailer</string>
    <string name="profile">Profile</string>
    <string name="ok">OK</string>
    <string name="show">Show</string>
    <string name="all">All</string>
    <string name="rating">Rating</string>
    <string name="popularity">Popularity</string>
    <string name="date">Date</string>
    <string name="sortBy">Sort by</string>
    <string name="country">Country</string>
    <string name="year">Year</string>
    <string name="filter">Filter</string>
    <string name="tvSeries">TV Series</string>
    <string name="reviews">Reviews</string>
    <string name="popularCelebs">Popular celebs</string>
    <string name="recommendations">Recommendations</string>
    <string name="discover">Discover</string>
    <string name="airingToday">Airing today</string>
    <string name="onTheAir">On the air</string>
    <string name="popular">Popular</string>
    <string name="topRated">Top rated</string>
    <string name="seasons">Seasons</string>
    <string name="welcomeText">Find and watch movies and TV Shows at your region</string>
    <string name="firstLogin">Firstly you’ll have to log in</string>
    <string name="getStarted">Get started</string>
    <string name="createAcc">Create Account</string>
    <string name="haveAccQuestion">Do you have an account?</string>
    <string name="login">Login</string>
    <string name="forgotPass">Forgot your password?</string>
    <string name="welcomeBack">Welcome back!</string>
    <string name="register">Register</string>
    <string name="enterContinue">Enter details to continue</string>
    <string name="policy">
        By clicking register, I confirm that i have read and accept the
        <font color="#1B37C7">Privacy Policy</font>
        and
        <font color="#1B37C7">Terms of Use</font>
    </string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="passShort">Password is too short. (At least 6 characters)</string>
    <string name="emptyField">Field is empty</string>
    <string name="infoRegister">Enter the 4-digit code sent to you at name@example.com</string>
    <string name="resendCode">Resend code</string>
    <string name="changeEmail">Change email address</string>
    <string name="fillProfile">Fill your profile</string>
    <string name="emailVerification">Email verification</string>
    <string name="category">Category</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="dateOfBirth">Date of birth</string>
    <string name="congratulations">Congratulations!</string>
    <string name="_continue">Continue</string>
    <string name="selectDate">Select date</string>
    <string name="errorEmail">Email isn\'t correct.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="suc">Success</string>
    <string name="fillOtp">OTP code is not filled.</string>
    <string name="nothingSelected">Nothing selected.</string>
    <string name="sucCreated">Account successfully created.</string>
    <string name="account">Account</string>
    <string name="editProfile">Edit Profile</string>
    <string name="settings">Settings</string>
    <string name="watched">Watched</string>
    <string name="passwordAndSecurity">Password and security</string>
    <string name="help">Help</string>
    <string name="customerSupport">Customer Support</string>
    <string name="language">Language</string>
    <string name="notifications">Notifications</string>
    <string name="wifiOnly">Wi-fi only</string>
    <string name="appVersion">App version</string>
    <string name="english">English</string>
    <string name="logOut">Log out</string>
    <string name="attention">Attention</string>
    <string name="no">No</string>
    <string name="username">Username</string>
    <string name="edit">Edit</string>
    <string name="yes">Yes</string>
    <string name="logOutMessage">Are you sure to log out?</string>
    <string name="itemDeleted">Item deleted</string>
    <string name="undo">Undo</string>
</resources>