<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:background="@color/black"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:gravity="center"
        android:text="@string/filter"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:fontFamily="@font/resistsansdisplay_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/materialDivider5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7">

    </com.google.android.material.divider.MaterialDivider>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/resistsansdisplayregular"
        android:text="@string/show"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialDivider5">

    </TextView>

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/materialButtonToggleGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"

        android:layout_marginTop="10dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"

        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/black_C"
            android:fontFamily="@font/resistsansdisplayregular"
            android:paddingHorizontal="25dp"
            android:paddingVertical="20dp"
            android:text="@string/tvSeries"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:cornerRadius="17dp"
            app:rippleColor="@color/blue">

        </com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/black_C"
            android:fontFamily="@font/resistsansdisplayregular"
            android:paddingHorizontal="25dp"
            android:paddingVertical="20dp"
            android:text="@string/movies"

            android:textColor="@color/white"
            android:textSize="12sp"
            app:cornerRadius="17dp"
            app:rippleColor="@color/blue">

        </com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/black_C"
            android:fontFamily="@font/resistsansdisplayregular"
            android:paddingHorizontal="25dp"
            android:paddingVertical="20dp"
            android:text="@string/all"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:cornerRadius="17dp"
            app:rippleColor="@color/blue">

        </com.google.android.material.button.MaterialButton>

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/black_C"
        app:cardCornerRadius="17dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialButtonToggleGroup">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:orientation="horizontal"
                android:paddingHorizontal="20dp"
                android:paddingVertical="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/resistsansdisplayregular"
                    android:gravity="start"
                    android:text="@string/genre"
                    android:textColor="@color/white">

                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/resistsansdisplayregular"
                    android:gravity="end"
                    android:text="@string/all"
                    android:textColor="@color/white">

                </TextView>

            </LinearLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="3dp">

            </com.google.android.material.divider.MaterialDivider>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:orientation="horizontal"
                android:paddingHorizontal="20dp"
                android:paddingVertical="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/resistsansdisplayregular"
                    android:gravity="start"
                    android:text="@string/country"
                    android:textColor="@color/white">

                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/resistsansdisplayregular"
                    android:gravity="end"
                    android:text="@string/all"
                    android:textColor="@color/white">

                </TextView>

            </LinearLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="3dp">

            </com.google.android.material.divider.MaterialDivider>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:orientation="horizontal"
                android:paddingHorizontal="20dp"
                android:paddingVertical="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/resistsansdisplayregular"
                    android:gravity="start"
                    android:text="@string/year"
                    android:textColor="@color/white">

                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/resistsansdisplayregular"
                    android:gravity="end"
                    android:text="@string/all"
                    android:textColor="@color/white">

                </TextView>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/resistsansdisplayregular"
        android:text="@string/sortBy"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView7">

    </TextView>

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/materialButtonToggleGroup2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9">

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/black_C"
            android:fontFamily="@font/resistsansdisplayregular"
            android:paddingHorizontal="25dp"
            android:paddingVertical="20dp"
            android:text="@string/rating"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:cornerRadius="17dp"
            app:rippleColor="@color/blue">

        </com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/black_C"
            android:fontFamily="@font/resistsansdisplayregular"
            android:paddingHorizontal="25dp"
            android:paddingVertical="20dp"
            android:text="@string/popularity"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:cornerRadius="17dp"
            app:rippleColor="@color/blue">

        </com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/black_C"
            android:fontFamily="@font/resistsansdisplayregular"
            android:paddingHorizontal="25dp"
            android:paddingVertical="20dp"
            android:text="@string/date"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:cornerRadius="17dp"
            app:rippleColor="@color/blue">

        </com.google.android.material.button.MaterialButton>
    </com.google.android.material.button.MaterialButtonToggleGroup>


    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Material3.Button.IconButton"
        android:id="@+id/buttonClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/close"
        app:iconSize="36dp"
        app:rippleColor="@color/blue"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialButtonToggleGroup2">

    </com.google.android.material.button.MaterialButton>


</androidx.constraintlayout.widget.ConstraintLayout>